syntax = "proto3";

package reply;
option go_package="./reply";

service Reply {
  rpc Comments(CommentsRequest) returns(CommentsResponse);
}

message CommentsRequest {
  int64 target_id = 1;
  int64 cursor = 2;
  int32 ps = 3;
}

message CommentsResponse {
  repeated CommentItem comments = 1;
  bool is_end = 2;
  int64 created_time = 3;
}

message CommentItem {
  int64 id = 1;
  string business = 2;
  int64 target_id = 3;
  int64 reply_user_id = 4;
  int64 be_reply_user_id = 5;
  int64 parent_id = 6;
  string content = 7;
  string image = 8;
  int64 create_time = 9;
  int64 update_time = 10;
}